tests/scripts/errors/runtime/await_non_thread.cdo
VAR x = await 42;
print(x);
